force-app/main/default/objects/Form_Question__c/Form_Question__c.object-meta.xml
<CustomObject>
    <label>Form Question</label>
    <nameField>
        <displayFormat>FQ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>