force-app/main/default/objects/Form_Question__c/fields/Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Field_Path__c</fullName>
    <label>Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>