force-app/main/default/objects/Form_Question__c/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Section</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Form Questions</relationshipLabel>
    <relationshipName>Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>