force-app/main/default/objects/Form_Question__c/fields/Slot_Booking_Task__c.field-meta.xml
<CustomField>
    <fullName>Slot_Booking_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slot Booking Task</label>
    <type>Checkbox</type>
</CustomField>