force-app/main/default/objects/Form_Question__c/fields/Study_Template_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Study_Template_Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Template Form Question</label>
    <referenceTo>Study_Template_Form_Question__c</referenceTo>
    <relationshipLabel>Form Questions</relationshipLabel>
    <relationshipName>Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>