force-app/main/default/objects/Form_Question__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Form_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>